--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/rebar/OneDrive/Bureau/GLQ/Fariboules/Fariboules/Fariboules.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rebar/OneDrive/Bureau/GLQ/Fariboules/Fariboules/TestFariboules.jar"/>
+	<classpathentry kind="lib" path="C:/Users/fbe01/Documents/GitHub/Fariboules/Fariboules.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/fbe01/Documents/GitHub/Fariboules/Fariboules.jar!/doc"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/fbe01/Documents/GitHub/Fariboules/TestFariboules.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
